# TIPS

./: .gitignore  PythonType.txt  get-tip.sh  get_tip.ps1  tags
CPP/: MOVE_SEMANTICS.txt  Сайты С++.txt
CPP/EXAMPLE/: MOVE_EXM.txt
HOTKEYS/: TERMINAL_EXM.txt
INSTALL/: CONFIG_FILE_PATHS.txt  GCC.txt  LINUX_PRETTY.txt  VIM.txt
INSTALL/EXAMPLE/: GCC_EXM.txt
SCRIPTING/: BASH.txt
SHELL/EXAMPLES/: FILEINFO_EXM.txt  FIND_FD_EXM.txt  NMAP_EXM.txt  NVIDIA_EXM.txt  RSYNC_EXM.txt  SSH_EXM.txt  SYSINFO_EXM.txt
SHELL/EXAMPLES/COMMON/: AWK_EXM.txt  DELFILE_EXM.txt  FIND_FD_EXM.txt  NETCAT_EXM.txt  NMAP_EXM.txt  PUTTY_EXM.txt  RSYNC_EXM.txt  SED_EXM.txt  SSH_EXM.txt  TUNNEL_EXM.txt
SHELL/EXAMPLES/LINUX/: IPROUTE_EXM.txt  LS_EXM.txt  MODULES_EXM.txt  MOUNT_EXM.txt  SYSTEMD_EXM.txt  USERS_EXM.txt  XARGS_EXM.txt
SHELL/EXAMPLES/POWERSHELL/: PSIP_EXM.txt  PS_DEVICE_EXM.txt  PS_ENV_EXM.txt  PS_FOR_EXM.txt  PS_LINKS_EXM.txt  PS_LS.txt  PS_STRINGS_EXM.txt  PS_SUDO_EXM.txt  PS_USERS_EXM.txt
SHELL/POWERSHELL/: COMMAND_LIST  POWERSHELL_EXAMPLES.txt  STANDARD_UTILITE.txt
SHELL/UTILITES/: FIND_FD.txt  NMAP.txt  PUTTY.txt  RSYNC.txt  SSH.txt  SYSTEMD.txt  XARGS.txt
UTILS/CMAKE/: CMakeList.txt  CMakeLists.txt  CMakeLists_пример.txt  cmake_tips.cmake
UTILS/EXAMPLES/: CMAKE_EXM.txt  JUPYTER_EXM.txt
UTILS/GIT/: GIT_EXM.txt
VIM/EXAMPLES/: VIM_EXM.txt  VIM_SETUP.txt
