cmake_minimum_required(VERSION 3.16)
project(TEST_TO_PROJECT LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)

set(INSTALL_EXAMPLEDIR "D:/STORAGE/YandexDisk/DEVELOPMENT/PROJECTS/TEST_PROJECT_DIR/QT_EXAMPLES/QT_TEST_EXAMPLE/PROJECT/TEST_TO_PROJECT/INSTALL")

if(EXISTS "D:/PROGRAM_LIBRARY/Qt515/5.15.2/mingw81_64")
  set(CMAKE_PREFIX_PATH "D:/PROGRAM_LIBRARY/Qt515/5.15.2/mingw81_64")
endif()

if(EXISTS "/mnt/d/PROGRAM_LIBRARY/linux/QT5.15.2/5.15.2/gcc_64/")
    set(CMAKE_PREFIX_PATH "/mnt/d/PROGRAM_LIBRARY/linux/QT5.15.2/5.15.2/gcc_64")
endif()

if(EXISTS "D:/PROGRAM_LIBRARY/Qt515/5.15.2/msvc2019_64")
  set(CMAKE_PREFIX_PATH "D:/PROGRAM_LIBRARY/Qt515/5.15.2/msvc2019_64")
endif()

set(Qt5Core_DIR "${CMAKE_PREFIX_PATH}/Qt5Core")
set(Qt5Test "${CMAKE_PREFIX_PATH}/Qt5Test")
set(Qt5 "${CMAKE_PREFIX_PATH}/Qt5")
set(QT_DIR "${CMAKE_PREFIX_PATH}/lib/cmake/Qt5")

set(QT_CORE_LIB 1)
find_package(Qt5 REQUIRED COMPONENTS Core Test)

add_executable(TEST_TO_PROJECT tests.cpp )
set_target_properties(TEST_TO_PROJECT PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE")


target_link_libraries(TEST_TO_PROJECT PUBLIC
    Qt::Core
    Qt::Test
)

#install(TARGETS TEST_TO_PROJECT
#    RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
#    LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
#)
